SERVER-76923 Allow bypassing checks for untimestamped writes as standalone