src/mongo/db/storage/wiredtiger/wiredtiger_begin_transaction_block.cpp
@@ -35,6 +35,9 @@
 
 #include "mongo/db/storage/wiredtiger/wiredtiger_begin_transaction_block.h"
 
+#include "mongo/db/repl/repl_settings.h"
+#include "mongo/db/repl_set_member_in_standalone_mode.h"
+#include "mongo/db/storage/storage_parameters_gen.h"
 #include "mongo/db/storage/wiredtiger/wiredtiger_util.h"
 #include "mongo/util/errno_util.h"
 
@@ -71,6 +74,14 @@ WiredTigerBeginTxnBlock::WiredTigerBeginTxnBlock(
         builder << "),";
     }
     if (allowUntimestampedWrite != RecoveryUnit::UntimestampedWriteAssertionLevel::kEnforce) {
+        builder << "no_timestamp=true,";
+    } else if (MONGO_unlikely(gAllowUnsafeUntimestampedWrites &&
+                              getReplSetMemberInStandaloneMode(getGlobalServiceContext()) &&
+                              !repl::ReplSettings::shouldRecoverFromOplogAsStandalone())) {
+        // We can safely ignore setting this configuration option when recovering from the oplog as
+        // standalone because:
+        // 1. Replaying oplog entries write with a timestamp.
+        // 2. The instance is put in read-only mode after oplog application has finished.
         builder << "no_timestamp=true,";
     }
 
